# rnaseq_pipeline

./: README.md  environment.yml  pipeline.py  pyproject.toml
.github/workflows/: python-package.yml
pipeline/: cram.py  fastqc.py  htseq.py  multiqc.py  pipeline.py  star.py
rnaseq_pipeline/: cli.py  run_fastqc.py  run_htseq.py  run_multiqc.py  run_samtools.py  run_star.py  run_versions.py
src/: pipeline.py
src/pipeline/: pipeline.py
