[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "rnaseq_pipeline"
version = "0.0.1"
authors = [
  { name="Travis Blimkie", email="travis.m.blimkie@gmail.com" },
]
description = "A small pipeline for short read RNA-Seq data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU v3"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/travis-m-blimkie/rnaseq_pipeline"
Issues = "https://github.com/travis-m-blimkie/rnaseq_pipeline/issues"
