[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rnaseq_pipeline"
version = "0.1.0"
description = "RNA-seq alignment and quantification pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
]

[project.scripts]
pipeline = "pipeline.cli:main"
